--- a/templates/rainbow/index.htm
+++ b/templates/rainbow/index.htm
@@ -22,11 +22,11 @@
 		</ul><br />
 		<div class="navhead">LAN-Party</div>
     <ul class="navbodyb">
-			<li><a href="{url:lanpartys_signin,id=1}">Anmelden</a></li>
-			<li><a href="{url:lanpartys_view,id=1}">Informationen</a></li>
-			<li><a href="{url:languests_lanpartys,id=1}">Teilnehmer</a></li>
-			<li><a href="{url:lanrooms_lanpartys,id=1}">Sitzplan</a></li>
-			<li><a href="{url:lanvotes_lanpartys,id=1}">Umfragen</a></li>
+			<li><a href="{url:lanpartys_signin:id=1}">Anmelden</a></li>
+			<li><a href="{url:lanpartys_view:id=1}">Informationen</a></li>
+			<li><a href="{url:languests_lanpartys:id=1}">Teilnehmer</a></li>
+			<li><a href="{url:lanrooms_lanpartys:id=1}">Sitzplan</a></li>
+			<li><a href="{url:lanvotes_lanpartys:id=1}">Umfragen</a></li>
 			<li><a href="{url:members_list}">Team</a></li>
 			<li><a href="{url:history_list}">History</a></li>
 			<li><a href="{url:rules_list}">Rules</a></li>
