--- a/templates/clansphere/template.css
+++ b/templates/clansphere/template.css
@@ -100,6 +100,10 @@ a:hover {
   border-bottom: 1px solid #888888;
   background-color: #FFFFFF;
   padding: 1px 2px 1px 2px;
+  color: #000000;
+  font-family: Arial;
+  font-size: 13px;
+  
 }
 #nav-left div, .navhead {
   margin-top: 20px;
