--- a/templates/clansphere/content.css
+++ b/templates/clansphere/content.css
@@ -2,7 +2,7 @@ img { border:0; }
 form { display:inline; }
 td {
   background-color:inherit;
-  color:#F2F2F2;
+  color:#000000;
   font-size:8pt;
   vertical-align:top;
 }
