fixes for clansphere template / added *.tmp files in uploads/cache to ignore list for svn

--- a/templates/clansphere/index.htm
+++ b/templates/clansphere/index.htm
@@ -55,15 +55,15 @@
 
 <div id="nav-right">
   <div class="navhead">LOGIN</div>
-  <div>{users:navlogin}</div>
-  <div class="navhead" id="upcoming">UPCOMING WARS</div>
-  <div>{wars:navnext}</div>
+  <div class="navbody">{users:navlogin}</div>
+  <div class="navhead">UPCOMING WARS</div>
+  <div class="navbody">{wars:navnext}</div>
   <div class="navhead">LATEST WARS</div>
-  <div>{wars:navlist}</div>
+  <div class="navbody">{wars:navlist}</div>
   <div class="navhead">VOTES</div>
-  <div>{votes:navlist}</div>
+  <div class="navbody">{votes:navlist}</div>
   <div class="navhead">COUNTER</div>
-  <div id="counter">
+  <div id="counter" class="navbody">
     <span>{count:navone}</span> <a href="{url:count_online}">Online</a><br />
     <span>{count:navday}</span> Heute<br />
     <span>{count:navmon}</span> Monat<br />
