--- a/templates/clansphere/content.css
+++ b/templates/clansphere/content.css
@@ -5,6 +5,7 @@ td {
   color:#000000;
   font-size:8pt;
   vertical-align:top;
+  line-height: 1.5;
 }
 textarea { width:90%; }
 ul { margin: 0;}
@@ -32,7 +33,7 @@ input, textarea, select {
   background-color:#FFFFFF;
   color:#B91F1D;
   text-transform: uppercase;
-  padding:2px 4px 2px 4px;
+  padding:4px 6px 4px 8px;
   text-align:left;
   letter-spacing: 3px;
   border-right: 4px solid #BA1616 !important;
