added agenda page for events mod and made it the default enter page for events

--- a/templates/clansphere/debug.htm
+++ b/templates/clansphere/debug.htm
@@ -31,7 +31,7 @@
   <a href="?mod=links&amp;action=sponsors" class="dark">Sponsors</a>
   
   <div>SERVICE</div>
-  <a href="?mod=events&amp;action=calendar" class="dark">Events</a>
+  <a href="?mod=events&amp;action=agenda" class="dark">Events</a>
   <a href="?mod=servers">Servers</a>
   <a href="?mod=users" class="dark">Community</a>
   <a href="?mod=files">Downloads</a>
