--- a/templates/clansphere/index.htm
+++ b/templates/clansphere/index.htm
@@ -32,7 +32,7 @@
   <a href="{url:links_sponsors}" class="dark">Sponsors</a>
   
   <div>SERVICE</div>
-  <a href="{url:events_calendar}" class="dark">Events</a>
+  <a href="{url:events_agenda}" class="dark">Events</a>
   <a href="{url:servers_list}">Servers</a>
   <a href="{url:users_list}" class="dark">Community</a>
   <a href="{url:files_list}">Downloads</a>
