--- a/templates/clansphere/admin.htm
+++ b/templates/clansphere/admin.htm
@@ -11,7 +11,7 @@
 <body>
 
 <div id="head">
-  <div>CLANSPHERE ADMINISTRATION</div>
+  <span>CLAN</span>SPHERE ADMINISTRATION
  </div>
 
 <div id="nav-left">
