--- a/templates/clansphere/index.htm
+++ b/templates/clansphere/index.htm
@@ -12,7 +12,7 @@
 
 <div id="head">
   <span>CLAN</span>SPHERE
-  <div>Makes your website a playmate, just dress her</div>
+  <div>Professional clan care starts here</div>
  </div>
 
 <div id="nav-left">
