--- a/templates/install/index.htm
+++ b/templates/install/index.htm
@@ -9,7 +9,7 @@
 </head>
 <body>
 <img src="img/clansphere.png" alt="Clansphere" /><br />
-<div id="slogan">Makes your website a playmate, just dress her</div>
+<div id="slogan">Professional clan care starts here</div>
 <br />
 
 <div id="navigation">
