added charset info to clansphere template

--- a/templates/clansphere/index.htm
+++ b/templates/clansphere/index.htm
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>{func:title}</title>
+  <meta http-equiv="Content-Type" content="text/html; charset={func:charset}" />
   {clansphere:navmeta}
   <link href="template.css" rel="stylesheet" type="text/css" />
   <link href="content.css" rel="stylesheet" type="text/css" />
