--- a/templates/clansphere/debug.htm
+++ b/templates/clansphere/debug.htm
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>{func:title}</title>
+  <meta http-equiv="Content-Type" content="text/html; charset={func:charset}" />
   {clansphere:navmeta}
   <link href="clansphere.css" rel="stylesheet" type="text/css" />
   <link href="clansphere_div.css" rel="stylesheet" type="text/css" />
