--- a/templates/install/index.htm
+++ b/templates/install/index.htm
@@ -8,7 +8,7 @@
   <script src="js/install.js" type="text/javascript"></script>
 </head>
 <body>
-<img src="img/clansphere.png" alt="Clansphere" /><br />
+<img src="img/clansphere.png" alt="ClanSphere" /><br />
 <div id="slogan">Professional clan care starts here</div>
 <br />
 
