--- a/templates/clansphere/debug.htm
+++ b/templates/clansphere/debug.htm
@@ -4,70 +4,68 @@
   <title>{func:title}</title>
   <meta http-equiv="Content-Type" content="text/html; charset={func:charset}" />
   {clansphere:navmeta}
-  <link href="clansphere.css" rel="stylesheet" type="text/css" />
+  <link href="template.css" rel="stylesheet" type="text/css" />
+  <link href="content.css" rel="stylesheet" type="text/css" />
   <link href="clansphere_div.css" rel="stylesheet" type="text/css" />
   <link rel="alternate" type="application/rss+xml" href="../../uploads/rss/news.xml" />
 </head>
 <body>
 
-<div id="debug">
-    <span id="errors">{func:errors}</span>
-    <span id="sql">{func:sql}</span>
-  </div>
-
 <div id="nav-left">
   <div>MAIN</div>
-  <a href="?mod=news&amp;action=recent" class="dark">News</a>
-  <a href="?mod=gbook">Gbook</a>
-  <a href="?mod=board" class="dark">Board</a>
-  <a href="?mod=search">Search</a>
+  <a href="{url:news_recent}" class="dark">News</a>
+  <a href="{url:gbook}">Gbook</a>
+  <a href="{url:board}" class="dark">Board</a>
+  <a href="{url:search}">Search</a>
   
   <div>CLAN</div>
-  <a href="?mod=members&amp;action=teams" class="dark">Teams</a>
-  <a href="?mod=members">Members</a>
-  <a href="?mod=wars" class="dark">Clanwars</a>
-  <a href="?mod=awards">Awards</a>
-  <a href="?mod=history" class="dark">History</a>
-  <a href="?mod=rules">Rules</a>
-  <a href="?mod=links&amp;action=sponsors" class="dark">Sponsors</a>
+  <a href="{url:members_teams}" class="dark">Teams</a>
+  <a href="{url:members_list}">Members</a>
+  <a href="{url:wars_list}" class="dark">Clanwars</a>
+  <a href="{url:awards_list}">Awards</a>
+  <a href="{url:history_list}" class="dark">History</a>
+  <a href="{url:rules_list}">Rules</a>
+  <a href="{url:links_sponsors}" class="dark">Sponsors</a>
   
   <div>SERVICE</div>
-  <a href="?mod=events&amp;action=agenda" class="dark">Events</a>
-  <a href="?mod=servers">Servers</a>
-  <a href="?mod=users" class="dark">Community</a>
-  <a href="?mod=files">Downloads</a>
-  <a href="?mod=replays" class="dark">Replays</a>
-  <a href="?mod=links">Links</a>
-  <a href="?mod=quotes" class="dark">Quotes</a>
-  <a href="?mod=faq">Faq</a>
-  <a href="?mod=articles" class="dark">Articles</a>
-  <a href="?mod=gallery">Gallery</a>
+  <a href="{url:events_agenda}" class="dark">Events</a>
+  <a href="{url:servers_list}">Servers</a>
+  <a href="{url:users_list}" class="dark">Community</a>
+  <a href="{url:files_list}">Downloads</a>
+  <a href="{url:replays_list}" class="dark">Replays</a>
+  <a href="{url:links_list}">Links</a>
+  <a href="{url:quotes_list}" class="dark">Quotes</a>
+  <a href="{url:faq_list}">Faq</a>
+  <a href="{url:articles_list}" class="dark">Articles</a>
+  <a href="{url:gallery_list}">Gallery</a>
+  <a href="{url:cups}"  class="dark">Cups</a>
       
   <div>CONTACT</div>
-  <a href="?mod=joinus&amp;action=new" class="dark">Joinus</a>
-  <a href="?mod=fightus&amp;action=new">Fightus</a>
-  <a href="?mod=contact&amp;action=mail" class="dark">Mailus</a>
-  <a href="?mod=contact&amp;action=imprint">Imprint</a>
-  <a href="?mod=clansphere&amp;action=about" class="dark">Scriptinfo</a>
+  <a href="{url:joinus_new}" class="dark">Joinus</a>
+  <a href="{url:fightus_new}">Fightus</a>
+  <a href="{url:contact_mail}" class="dark">Mailus</a>
+  <a href="{url:contact_imprint}">Imprint</a>
+  <a href="{url:clansphere_about}" class="dark">Scriptinfo</a>
  </div>
 
 <div id="content">{func:show}</div>
 
 <div id="nav-right">
   <div class="navhead">LOGIN</div>
-  <div>{users:navlogin}</div>
-  <div class="navhead" id="upcoming">UPCOMING WARS</div>
-  <div>{wars:navnext}</div>
+  <div class="navbody">{users:navlogin}</div>
+  <div class="navhead">UPCOMING WARS</div>
+  <div class="navbody">{wars:navnext}</div>
   <div class="navhead">LATEST WARS</div>
-  <div>{wars:navlist}</div>
+  <div class="navbody">{wars:navlist}</div>
   <div class="navhead">VOTES</div>
-  <div>{votes:navlist}</div>
+  <div class="navbody">{votes:navlist}</div>
   <div class="navhead">COUNTER</div>
-  <div id="counter">
-    <span>{count:navone}</span> <a href="?mod=count&amp;action=online">Online</a><br />
+  <div id="counter" class="navbody">
+    <span>{count:navone}</span> <a href="{url:count_online}">Online</a><br />
     <span>{count:navday}</span> Heute<br />
     <span>{count:navmon}</span> Monat<br />
-    <span>{count:navall}</span> <a href="?mod=count&amp;action=stats">Gesamt</a>
+    <span>{count:navusr}</span> Registriert<br />	
+    <span>{count:navall}</span> <a href="{url:count_stats}">Gesamt</a>
    </div>
  </div>
 
