added bottom bar to clansphere template

--- a/templates/clansphere/debug.htm
+++ b/templates/clansphere/debug.htm
@@ -69,5 +69,7 @@
    </div>
  </div>
 
+ <div id="bottom">{clansphere:navtime} - Load: {func:parse}ms - Queries: {func:queries} - Memory: {func:memory}</div>
+ 
 </body>
 </html>
