--- a/templates/clansphere/index.htm
+++ b/templates/clansphere/index.htm
@@ -73,6 +73,8 @@
     <span>{count:navall}</span> <a href="{url:count_stats}">Gesamt</a>
    </div>
  </div>
+ 
+<div id="bottom">{clansphere:navtime} - Load: {func:parse}ms - Queries: {func:queries} - Memory: {func:memory}</div>
 
 </body>
 </html>
