--- a/templates/clansphere/content.css
+++ b/templates/clansphere/content.css
@@ -156,10 +156,15 @@ input, textarea, select {
 
 /*Manage*/
 .manage {
+  background-color:#F8F8F8;
   border: 1px dotted;
   float:left;
   margin: 6px;
   overflow: auto;
   padding:8px 0px 10px 0px;
   width:100px;
+}
+.manage:hover {
+  background-color:#E2E2E2;
+  border: 1px solid;
 }
