changed c classes bg color a bit in template clansphere

--- a/templates/clansphere/content.css
+++ b/templates/clansphere/content.css
@@ -62,7 +62,7 @@ input, textarea, select {
   padding:4px 6px 4px 8px;
 }
 .leftc,.centerc,.rightc {
-  background-color:#FFFFFF;
+  background-color:#F2F2F2;
   color:#222222;
   padding:4px 6px 4px 8px;
 }
