--- a/templates/clansphere/debug.htm
+++ b/templates/clansphere/debug.htm
@@ -1,8 +1,9 @@
+<?xml version="1.0" encoding="{func:charset}"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>{func:title}</title>
-  <meta http-equiv="Content-Type" content="text/html; charset={func:charset}" />
+  <meta http-equiv="Content-Type" content="application/xhtml+xml; charset={func:charset}" />
   {clansphere:navmeta}
   <link href="template.css" rel="stylesheet" type="text/css" />
   <link href="content.css" rel="stylesheet" type="text/css" />
