--- a/templates/clansphere/debug.htm
+++ b/templates/clansphere/debug.htm
@@ -54,20 +54,14 @@
 <div id="nav-right">
   <div class="navhead">LOGIN</div>
   <div class="navbody">{users:navlogin}</div>
+  <div class="navhead">ERROR LOGS</div>
+  <div class="navbody">{logs:navlist}</div>
   <div class="navhead">UPCOMING WARS</div>
   <div class="navbody">{wars:navnext}</div>
   <div class="navhead">LATEST WARS</div>
   <div class="navbody">{wars:navlist}</div>
   <div class="navhead">VOTES</div>
   <div class="navbody">{votes:navlist}</div>
-  <div class="navhead">COUNTER</div>
-  <div id="counter" class="navbody">
-    <span>{count:navone}</span> <a href="{url:count_online}">Online</a><br />
-    <span>{count:navday}</span> Heute<br />
-    <span>{count:navmon}</span> Monat<br />
-    <span>{count:navusr}</span> Registriert<br />	
-    <span>{count:navall}</span> <a href="{url:count_stats}">Gesamt</a>
-   </div>
  </div>
 
  <div id="bottom">{clansphere:navtime} - Load: {func:parse}ms - Queries: {func:queries} - Memory: {func:memory}</div>
