--- a/templates/clansphere/index.htm
+++ b/templates/clansphere/index.htm
@@ -74,7 +74,16 @@
    </div>
  </div>
  
-<div id="bottom">{clansphere:navtime} - Load: {func:parse}ms - Queries: {func:queries} - Memory: {func:memory}</div>
+<div id="bottom">
+  {clansphere:navtime} - Load: {func:parse}ms
+  <br /><hr style="width: 100%" />
+  <span style="float:left"><a href="../../uploads/rss/news.xml">News Feed</a></span>
+  <span style="float:right">Supported standards:
+    <a href="http://validator.w3.org/check?uri=referer">XHTML 1.0</a> -
+    <a href="http://jigsaw.w3.org/css-validator/check/refer">CSS 2.1</a> -
+    <a href="http://validator.w3.org/feed/">RSS 2.0</a>
+  </span><br />
+</div>
 
 </body>
 </html>
