--- a/templates/clansphere/index.htm
+++ b/templates/clansphere/index.htm
@@ -7,7 +7,7 @@
   <link href="template.css" rel="stylesheet" type="text/css" />
   <link href="content.css" rel="stylesheet" type="text/css" />
   <link href="clansphere_div.css" rel="stylesheet" type="text/css" />
-  <link rel="alternate" type="application/rss+xml" href="../../uploads/rss/news.xml" />
+  <link rel="alternate" type="application/rss+xml" href="../../uploads/rss/news.xml" id="rss_news" />
 </head>
 <body>
 
@@ -77,7 +77,9 @@
 <div id="bottom">
   {clansphere:navtime} - Load: {func:parse}ms
   <br /><hr style="width: 100%" />
-  <span style="float:left"><a href="../../uploads/rss/news.xml">News Feed</a></span>
+  <span style="float:left">
+    <a href="{url:news_feed}">News Feed</a>
+  </span>
   <span style="float:right">Supported standards:
     <a href="http://validator.w3.org/check?uri=referer">XHTML 1.0</a> -
     <a href="http://jigsaw.w3.org/css-validator/check/refer">CSS 2.1</a> -
