added navdebug feature for debug mode

--- a/templates/clansphere/debug.htm
+++ b/templates/clansphere/debug.htm
@@ -56,12 +56,8 @@
   <div class="navbody">{users:navlogin}</div>
   <div class="navhead">ERROR LOGS</div>
   <div class="navbody">{logs:navlist}</div>
-  <div class="navhead">UPCOMING WARS</div>
-  <div class="navbody">{wars:navnext}</div>
-  <div class="navhead">LATEST WARS</div>
-  <div class="navbody">{wars:navlist}</div>
-  <div class="navhead">VOTES</div>
-  <div class="navbody">{votes:navlist}</div>
+  <div class="navhead">NAVLISTS</div>
+  <div class="navbody">{clansphere:navdebug}</div>
 </div>
 
 <div id="bottom">
