--- a/templates/clansphere/debug.htm
+++ b/templates/clansphere/debug.htm
@@ -70,7 +70,10 @@
     <a href="http://validator.w3.org/check?uri=referer">XHTML 1.1</a> -
     <a href="http://jigsaw.w3.org/css-validator/check/refer">CSS 2.1</a> -
     <a href="http://validator.w3.org/feed/">RSS 2.0</a>
-  </span><br />
+  </span>
+  <span>
+    <a href="http://bugs.clansphere.net">Report a BUG</a>
+  </span>
 </div>
  
 </body>
