removed div css

--- a/templates/clansphere/debug.htm
+++ b/templates/clansphere/debug.htm
@@ -7,7 +7,6 @@
   {clansphere:navmeta}
   <link href="template.css" rel="stylesheet" type="text/css" />
   <link href="content.css" rel="stylesheet" type="text/css" />
-  <link href="clansphere_div.css" rel="stylesheet" type="text/css" />
   <link rel="alternate" type="application/rss+xml" href="../../uploads/rss/news.xml" id="rss_news" />
 </head>
 <body>
@@ -39,7 +38,7 @@
   <a href="{url:faq_list}">Faq</a>
   <a href="{url:articles_list}" class="dark">Articles</a>
   <a href="{url:gallery_list}">Gallery</a>
-  <a href="{url:cups}"  class="dark">Cups</a>
+  <a href="{url:cups}" class="dark">Cups</a>
       
   <div>CONTACT</div>
   <a href="{url:joinus_new}" class="dark">Joinus</a>
@@ -66,7 +65,8 @@
   <span style="float:left">
     <a href="{url:news_feed}">News Feed</a>
   </span>
-  <span style="float:right">Supported standards:
+  <span style="float:right">
+    Supported standards:
     <a href="http://validator.w3.org/check?uri=referer">XHTML 1.1</a> -
     <a href="http://jigsaw.w3.org/css-validator/check/refer">CSS 2.1</a> -
     <a href="http://validator.w3.org/feed/">RSS 2.0</a>
