--- a/templates/clansphere/index.htm
+++ b/templates/clansphere/index.htm
@@ -83,7 +83,8 @@
   <span style="float:left">
     <a href="{url:news_feed}">News Feed</a>
   </span>
-  <span style="float:right">Supported standards:
+  <span style="float:right">
+    Supported standards:
     <a href="http://validator.w3.org/check?uri=referer">XHTML 1.0</a> -
     <a href="http://jigsaw.w3.org/css-validator/check/refer">CSS 2.1</a> -
     <a href="http://validator.w3.org/feed/">RSS 2.0</a>
