small changes in navlogin3 and admin panel

--- a/templates/clansphere/admin.htm
+++ b/templates/clansphere/admin.htm
@@ -17,18 +17,18 @@
 <div id="nav-left">
   <div class="navhead">MODULES</div>
   <div class="navbody">{clansphere:navadmin}</div>
- </div>
+</div>
 
 <div id="content">{func:show}</div>
 
 <div id="nav-right">
   <div class="navhead">ACCOUNT</div>
-  <div class="navbody">{clansphere:navusers}</div>
-  <div class="navhead">OPTIONS</div>
-  <div class="navbody">{clansphere:navoptions}</div>
-  <div class="navhead">SYSTEM</div>
-  <div class="navbody">{clansphere:navsystem}</div>
- </div>
+  <div class="navbody">{users:navlogin3}</div>
+  <div class="navhead">ERROR LOGS</div>
+  <div class="navbody">{logs:navlist}</div>
+  <div class="navhead">NAVLISTS</div>
+  <div class="navbody">{clansphere:navdebug}</div>
+</div>
 
 </body>
 </html>
