applied navlogin changes to template

--- a/templates/clansphere/admin.htm
+++ b/templates/clansphere/admin.htm
@@ -23,7 +23,7 @@
 
 <div id="nav-right">
   <div class="navhead">ACCOUNT</div>
-  <div class="navbody">{users:navlogin3}</div>
+  <div class="navbody">{users:navlogin:style=icons}</div>
   <div class="navhead">ERROR LOGS</div>
   <div class="navbody">{logs:navlist}</div>
   <div class="navhead">NAVLISTS</div>
