--- a/templates/clansphere/index.htm
+++ b/templates/clansphere/index.htm
@@ -59,6 +59,8 @@
 <div id="nav-right">
   <div class="navhead">LOGIN</div>
   <div class="navbody">{users:navlogin}</div>
+  <div class="navhead">TOPMATCH</div>
+  <div class="navbody">{wars:navtop}</div>
   <div class="navhead">UPCOMING WARS</div>
   <div class="navbody">{wars:navnext}</div>
   <div class="navhead">LATEST WARS</div>
