--- a/mods/lightbox/css/slimbox.css
+++ b/mods/lightbox/css/slimbox.css
@@ -6,6 +6,7 @@
 	width: 100%;
 	background-color: #000;
 	cursor: pointer;
+  z-index: 100;
 }
 
 #lbCenter, #lbBottomContainer {
@@ -17,6 +18,7 @@
 
 .lbLoading {
 	background: #fff url(loading.gif) no-repeat center;
+	z-index: 101;
 }
 
 #lbImage {
@@ -25,6 +27,7 @@
 	top: 0;
 	border: 10px solid #fff;
 	background-repeat: no-repeat;
+	z-index: 102;
 }
 
 #lbPrevLink, #lbNextLink {
