--- a/templates/install/clansphere.css
+++ b/templates/install/clansphere.css
@@ -70,6 +70,7 @@ input, textarea, select {
   font-weight: bold;
   color: #000000;
   font-size: 12px;
+  padding:4px 6px 4px 8px;
 }
 
 .leftc, .leftb {
