[ajax] fixed: rss link in the template [ajax] added: server is able to force a client side reload by settings reload:1 in the json response

--- a/templates/clansphere/index.htm
+++ b/templates/clansphere/index.htm
@@ -83,7 +83,7 @@
   {clansphere:navtime} - Load: {func:parse}ms
   <br /><hr style="width: 100%" />
   <span style="float:left">
-    <a href="{url:news_feed}">News Feed</a>
+    <a href="{url:news_feed}" class="noajax">News Feed</a>
   </span>
   <span style="float:right">
     Supported standards:
