rewrite of template engine from regex to tokenizer [thx to jokey for idea]

--- a/templates/clansphere/admin.htm
+++ b/templates/clansphere/admin.htm
@@ -19,7 +19,7 @@
   <div class="navbody">{clansphere:navadmin}</div>
 </div>
 
-<div id="content">{func:show}</div>
+{func:show}
 
 <div id="nav-right">
   <div class="navhead">ACCOUNT</div>
