changed automatic generated id for the content area to be "csp_content" instead of just "content"

--- a/templates/clansphere/admin.htm
+++ b/templates/clansphere/admin.htm
@@ -19,7 +19,7 @@
   <div class="navbody">{clansphere:navadmin}</div>
 </div>
 
-{func:show}
+<div id="content">{func:show}</div>
 
 <div id="nav-right">
   <div class="navhead">ACCOUNT</div>
