--- a/templates/clansphere/debug.htm
+++ b/templates/clansphere/debug.htm
@@ -48,7 +48,7 @@
   <a href="{url:clansphere_about}" class="dark">Scriptinfo</a>
  </div>
 
-{func:show}
+<div id="content">{func:show}</div>
 
 <div id="nav-right">
   <div class="navhead">LOGIN</div>
