--- a/templates/clansphere/index.htm
+++ b/templates/clansphere/index.htm
@@ -54,7 +54,7 @@
   <a href="{url:clansphere_about}" class="dark">Scriptinfo</a>
  </div> <!-- Nav-left End -->
 
-{func:show}
+<div id="content">{func:show}</div>
 
 <div id="nav-right">
   <div class="navhead">LOGIN</div>
