--- a/templates/clansphere/login.htm
+++ b/templates/clansphere/login.htm
@@ -15,7 +15,7 @@
   <div>This page is down for maintenance</div>
  </div>
 
-<div style="width: 100%">{func:show}</div>
+<div style="width: 100%" id="content">{func:show}</div>
 
 </body>
 </html>
