re added div id content to install template

--- a/templates/install/error.htm
+++ b/templates/install/error.htm
@@ -9,6 +9,8 @@
 <img src="img/clansphere.png" alt="Clansphere" /><br />
 <div id="slogan">Professional clan care starts here</div>
 <br />
-{func:show}
+
+<div id="content">{func:show}</div>
+
 </body>
 </html>
