--- a/templates/install/index.htm
+++ b/templates/install/index.htm
@@ -11,12 +11,12 @@
 <div id="slogan">Professional clan care starts here</div>
 <br />
 
-<div id="navigation">
-  {install:navi}
- </div>
+<div id="navigation">{install:navi}</div>
+
 <div id="headline">{install:headline}</div>
 <hr /><br />
-{func:show}
+
+<div id="content">{func:show}</div>
 
 </body>
 </html>
