fixed the s char in clansphere to uppercase plus some code beauty improvements

--- a/templates/install/clansphere.css
+++ b/templates/install/clansphere.css
@@ -59,7 +59,7 @@ a:active, a:hover {
   text-decoration:underline;
 }
 
-/** Clansphere **/
+/** ClanSphere **/
 
 input, textarea, select {
   background-color: #F2F2F2;
