--- a/templates/install/error.htm
+++ b/templates/install/error.htm
@@ -6,7 +6,7 @@
   <link href="clansphere.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-<img src="img/clansphere.png" alt="Clansphere" /><br />
+<img src="img/clansphere.png" alt="ClanSphere" /><br />
 <div id="slogan">Professional clan care starts here</div>
 <br />
 
