added html class 'thread_author_comment' to mark thread authors board comments added html class 'uthreadstarter' to the threadstarter status indicator

--- a/templates/clansphere/content.css
+++ b/templates/clansphere/content.css
@@ -200,3 +200,11 @@ input, textarea, select {
   padding: 4px 0 4px 0; 
   color: #555555
 }
+
+.uthreadstarter {
+  color: #aa5500;
+}
+
+.thread_author_comment .leftc {
+  background-color:#f1eae6;
+}
