fixed install headline directly bound to navigation border

--- a/templates/install/index.htm
+++ b/templates/install/index.htm
@@ -13,7 +13,7 @@
 
 <div id="navigation">{install:navi}</div>
 
-<div id="headline">{install:headline}</div>
+<div id="headline">&nbsp; {install:headline}</div>
 <hr /><br />
 
 <div id="content">{func:show}</div>
