introduced func:path placeholder - idea by matti, thanks alot

--- a/templates/clansphere/admin.htm
+++ b/templates/clansphere/admin.htm
@@ -6,7 +6,7 @@
   {clansphere:navmeta}
   <link href="admin.css" rel="stylesheet" type="text/css" />
   <link href="content.css" rel="stylesheet" type="text/css" />
-  <link rel="alternate" type="application/rss+xml" href="../../uploads/rss/news.xml" />
+  <link rel="alternate" type="application/rss+xml" href="{func:path}uploads/rss/news.xml" />
 </head>
 <body>
 
