--- a/templates/clansphere/index.htm
+++ b/templates/clansphere/index.htm
@@ -6,7 +6,7 @@
   {clansphere:navmeta}
   <link href="template.css" rel="stylesheet" type="text/css" />
   <link href="content.css" rel="stylesheet" type="text/css" />
-  <link rel="alternate" type="application/rss+xml" href="../../uploads/rss/news.xml" id="rss_news" />
+  <link rel="alternate" type="application/rss+xml" href="{func:path}uploads/rss/news.xml" id="rss_news" />
 </head>
 <body>
 
