--- a/templates/clansphere/content.css
+++ b/templates/clansphere/content.css
@@ -32,6 +32,7 @@ input, textarea, select {
   font-family: Tahoma, Arial, sans-serif;
   font-size: 8pt;
   margin: 2px;
+  outline: none;
   padding-left: 3px;
 }
 .forum {
